solve the requirements

--- a/projects/p2_image_classifier/Project_Image_Classifier_Project.ipynb
+++ b/projects/p2_image_classifier/Project_Image_Classifier_Project.ipynb
@@ -46,7 +46,15 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: Make all necessary imports.\n"
+    "# TODO: Make all necessary imports.\n",
+    "import tensorflow as tf\n",
+    "import tensorflow_datasets as tfds\n",
+    "import tensorflow_hub as hub\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import json\n",
+    "import os\n",
+    "from PIL import Image\n"
    ]
   },
   {
@@ -79,7 +87,13 @@
    "source": [
     "# TODO: Load the dataset with TensorFlow Datasets.\n",
     "\n",
-    "# TODO: Create a training set, a validation set and a test set.\n"
+    "# TODO: Create a training set, a validation set and a test set.\n",
+    "(ds_train, ds_val, ds_test), ds_info = tfds.load(\n",
+    "    'oxford_flowers102',\n",
+    "    split=['train[:85%]', 'train[85%:90%]', 'train[90%:]'],\n",
+    "    with_info=True,\n",
+    "    as_supervised=True,\n",
+    ")"
    ]
   },
   {
@@ -108,7 +122,18 @@
    "source": [
     "# TODO: Get the number of examples in each set from the dataset info.\n",
     "\n",
-    "# TODO: Get the number of classes in the dataset from the dataset info.\n"
+    "# TODO: Get the number of classes in the dataset from the dataset info.\n",
+    "\n",
+    "\n",
+    "num_train_examples = ds_info.splits['train'].num_examples * 85 // 100\n",
+    "num_val_examples = ds_info.splits['train'].num_examples * 5 // 100\n",
+    "num_test_examples = ds_info.splits['train'].num_examples * 10 // 100\n",
+    "num_classes = ds_info.features['label'].num_classes\n",
+    "\n",
+    "print(\"Training examples:\", num_train_examples)\n",
+    "print(\"Validation examples:\", num_val_examples)\n",
+    "print(\"Test examples:\", num_test_examples)\n",
+    "print(\"Number of classes:\", num_classes)\n"
    ]
   },
   {
@@ -125,7 +150,9 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: Print the shape and corresponding label of 3 images in the training set.\n"
+    "# TODO: Print the shape and corresponding label of 3 images in the training set.\n",
+    "for image, label in ds_train.take(3):\n",
+    "    print(\"Shape:\", image.shape, \"Label:\", label.numpy())"
    ]
   },
   {
@@ -143,7 +170,13 @@
    "outputs": [],
    "source": [
     "# TODO: Plot 1 image from the training set. Set the title \n",
-    "# of the plot to the corresponding image label. \n"
+    "# of the plot to the corresponding image label. \n",
+    "\n",
+    "for image, label in ds_train.take(1):\n",
+    "    plt.imshow(image)\n",
+    "    plt.title(f\"Label ID: {label.numpy()}\")\n",
+    "    plt.axis('off')\n",
+    "    plt.show()\n"
    ]
   },
   {
@@ -216,7 +249,13 @@
    "outputs": [],
    "source": [
     "# TODO: Create a pipeline for each set.\n",
-    "\n"
+    "\n",
+    "# Plot one image with class name\n",
+    "for image, label in ds_train.take(1):\n",
+    "    plt.imshow(image)\n",
+    "    plt.title(class_names[str(label.numpy())])\n",
+    "    plt.axis('off')\n",
+    "    plt.show()\n"
    ]
   },
   {
@@ -258,7 +297,16 @@
    "outputs": [],
    "source": [
     "# TODO: Build and train your network.\n",
-    "\n"
+    "\n",
+    "# Normalize images\n",
+    "def format_image(image, label):\n",
+    "    image = tf.image.resize(image, (224, 224)) / 255.0\n",
+    "    return image, label\n",
+    "\n",
+    "BATCH_SIZE = 32\n",
+    "ds_train = ds_train.map(format_image).shuffle(1000).batch(BATCH_SIZE).prefetch(tf.data.AUTOTUNE)\n",
+    "ds_val = ds_val.map(format_image).batch(BATCH_SIZE).prefetch(tf.data.AUTOTUNE)\n",
+    "ds_test = ds_test.map(format_image).batch(BATCH_SIZE).prefetch(tf.data.AUTOTUNE)\n"
    ]
   },
   {
@@ -276,7 +324,21 @@
    "outputs": [],
    "source": [
     "# TODO: Plot the loss and accuracy values achieved during training for the training and validation set.\n",
-    "\n"
+    "\n",
+    "# Build and train the model\n",
+    "model = tf.keras.Sequential([\n",
+    "    hub.KerasLayer(\"https://tfhub.dev/google/tf2-preview/mobilenet_v2/feature_vector/4\", \n",
+    "                   input_shape=(224, 224, 3), trainable=False),\n",
+    "    tf.keras.layers.Dense(num_classes, activation='softmax')\n",
+    "])\n",
+    "\n",
+    "model.compile(optimizer='adam',\n",
+    "              loss='sparse_categorical_crossentropy',\n",
+    "              metrics=['accuracy'])\n",
+    "\n",
+    "history = model.fit(ds_train,\n",
+    "                    validation_data=ds_val,\n",
+    "                    epochs=5)\n"
    ]
   },
   {
@@ -306,6 +368,27 @@
    "outputs": [],
    "source": [
     "# TODO: Print the loss and accuracy values achieved on the entire test set.\n",
+    "# Plot loss and accuracy\n",
+    "acc = history.history['accuracy']\n",
+    "val_acc = history.history['val_accuracy']\n",
+    "loss = history.history['loss']\n",
+    "val_loss = history.history['val_loss']\n",
+    "\n",
+    "epochs_range = range(5)\n",
+    "\n",
+    "plt.figure(figsize=(12, 4))\n",
+    "plt.subplot(1, 2, 1)\n",
+    "plt.plot(epochs_range, acc, label='Training Accuracy')\n",
+    "plt.plot(epochs_range, val_acc, label='Validation Accuracy')\n",
+    "plt.legend()\n",
+    "plt.title('Accuracy')\n",
+    "\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.plot(epochs_range, loss, label='Training Loss')\n",
+    "plt.plot(epochs_range, val_loss, label='Validation Loss')\n",
+    "plt.legend()\n",
+    "plt.title('Loss')\n",
+    "plt.show()\n",
     "\n"
    ]
   },
@@ -332,7 +415,9 @@
    "outputs": [],
    "source": [
     "# TODO: Save your trained model as a Keras model.\n",
-    "\n"
+    "test_loss, test_accuracy = model.evaluate(ds_test)\n",
+    "print(f\"Test Loss: {test_loss:.4f}\")\n",
+    "print(f\"Test Accuracy: {test_accuracy:.4f}\")\n"
    ]
   },
   {
@@ -362,7 +447,8 @@
    "outputs": [],
    "source": [
     "# TODO: Load the Keras model\n",
-    "\n"
+    "# Save model\n",
+    "model.save(\"my_flower_model.h5\")\n"
    ]
   },
   {
@@ -416,6 +502,8 @@
    "outputs": [],
    "source": [
     "# TODO: Create the process_image function\n",
+    "# Load model\n",
+    "loaded_model = tf.keras.models.load_model(\"my_flower_model.h5\", custom_objects={'KerasLayer': hub.KerasLayer})\n",
     "\n"
    ]
   },
@@ -496,6 +584,20 @@
    "outputs": [],
    "source": [
     "# TODO: Create the predict function\n",
+    "# Define process_image\n",
+    "def process_image(image):\n",
+    "    image = tf.image.resize(image, (224, 224)) / 255.0\n",
+    "    return image.numpy()\n",
+    "# Define predict function\n",
+    "def predict(image_path, model, top_k=5):\n",
+    "    image = Image.open(image_path)\n",
+    "    image = np.asarray(image)\n",
+    "    image = process_image(image)\n",
+    "    image = np.expand_dims(image, axis=0)\n",
+    "    predictions = model.predict(image)[0]\n",
+    "    top_k_indices = predictions.argsort()[-top_k:][::-1]\n",
+    "    return predictions[top_k_indices], top_k_indices\n",
+    "\n",
     "\n"
    ]
   },
@@ -536,7 +638,8 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: Plot the input image along with the top 5 classes\n"
+    "# TODO: Plot the input image along with the top 5 classes\n",
+    "\n"
    ]
   }
  ],
